tests/textual/error/unListData.uplc
(program 0.0.0 [(builtin unListData) (con data { Integer 0 })])
